<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocalGame">

    <Button
        android:id="@+id/MenuButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TurnImage" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="363dp"
        android:layout_height="365dp"
        android:contentDescription="@string/game_board"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284"
        app:srcCompat="@drawable/board" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="107dp"
        android:layout_height="56dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="48dp"
        android:text="@string/turn"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/TurnImage"
        android:layout_width="92dp"
        android:layout_height="89dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/space"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/cross" />

    <ImageButton
        android:id="@+id/space1"
        android:layout_width="84dp"
        android:layout_height="82dp"
        android:contentDescription="@string/space"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/blank"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/space2"
        android:layout_width="89dp"
        android:layout_height="86dp"
        android:contentDescription="@string/space"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/blank" />

    <ImageButton
        android:id="@+id/space3"
        android:layout_width="89dp"
        android:layout_height="86dp"
        android:contentDescription="@string/space"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/blank" />

    <ImageButton
        android:id="@+id/space4"
        android:layout_width="89dp"
        android:layout_height="86dp"
        android:contentDescription="@string/space"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.48"
        app:srcCompat="@drawable/blank" />

    <ImageButton
        android:id="@+id/space5"
        android:layout_width="89dp"
        android:layout_height="86dp"
        android:contentDescription="@string/space"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.48"
        app:srcCompat="@drawable/blank" />

    <ImageButton
        android:id="@+id/space6"
        android:layout_width="89dp"
        android:layout_height="86dp"
        android:contentDescription="@string/space"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.48"
        app:srcCompat="@drawable/blank" />

    <ImageButton
        android:id="@+id/space7"
        android:layout_width="89dp"
        android:layout_height="86dp"
        android:contentDescription="@string/space"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.953"
        app:srcCompat="@drawable/blank" />

    <ImageButton
        android:id="@+id/space8"
        android:layout_width="89dp"
        android:layout_height="86dp"
        android:contentDescription="@string/space"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.953"
        app:srcCompat="@drawable/blank" />

    <ImageButton
        android:id="@+id/space9"
        android:layout_width="89dp"
        android:layout_height="86dp"
        android:contentDescription="@string/space"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.953"
        app:srcCompat="@drawable/blank" />

</androidx.constraintlayout.widget.ConstraintLayout>